classDiagram
direction LR

%% =========================
%% 1) POJO / Domain model
%% =========================

class SaleableItem {
  <<interface>>
  +sellItem()
  +getPrice()
}

class Serializable {
  <<interface>>
}

class ProductItem {
  -String productId
}

SaleableItem <|.. ProductItem
Serializable <|.. ProductItem

class Publication {
  <<abstract>>
  -String title
  -double price
  -int copies
  +getPrice()
}

class Book {
  -String author
  +edit()
  +initialize()
  +sellItem()
}

class Magazine {
  -int orderQty
  -java.util.Date currentIssue
  +edit()
  +initialize()
  +sellItem()
}

class DiscMag {
  -boolean hasDisc
  +edit()
  +initialize()
  +sellItem()
}

class Ticket {
  +String description
  +double price
  +sellItem()
}

ProductItem <|-- Publication
Publication <|-- Book
Publication <|-- Magazine
Magazine <|-- DiscMag
ProductItem <|-- Ticket

class Cart {
  -Long id
}
Cart "0..*" -- "0..*" ProductItem : contains

class CashTill {
  -double runningTotal
  +showTotal()
  +sellItem(SaleableItem item)
}
ProductItem <-- CashTill


%% =========================
%% 2) JPA / Entity model
%% =========================

class ProductEntity {
  <<abstract>>
  Long id
  String name
  String description
  double price
}

class BookEntity {
  String isbn
  String author
  Integer copies
}

class MagazineEntity {
  int issueNumber
  String publisher
}

class DiscMagEntity {
  String discType
}

class TicketEntity {
  String eventName
  LocalDate eventDate
}

class SmartphoneEntity {
  String brand
  int warrantyMonths
  int storageGb
  boolean has5g
}

class LaptopEntity {
  String brand
  int warrantyMonths
  int ramGb
  String cpuModel
}

class CartEntity {
  Long id
  String customerName
  LocalDateTime createdAt
}

class OrderEntity {
  Long id
  LocalDateTime orderDate
  double totalAmount
}

ProductEntity <|-- BookEntity
ProductEntity <|-- MagazineEntity
MagazineEntity <|-- DiscMagEntity
ProductEntity <|-- TicketEntity
ProductEntity <|-- SmartphoneEntity
ProductEntity <|-- LaptopEntity

CartEntity "0..*" -- "0..*" ProductEntity : cart_products
OrderEntity "0..*" -- "0..*" ProductEntity : order_products


%% =========================
%% 3) Optional: mapping note
%% (conceptual, not code)
%% =========================
ProductItem ..> ProductEntity : "concept maps to"
Cart ..> CartEntity : "concept maps to"
